--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ng-http-loader": "^11.0.1",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.3.4",
+    "toastr": "^2.1.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -37,6 +38,7 @@
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
+    "@types/toastr": "^2.1.39",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
