--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.2.0",
+    "@angular/cdk": "^13.2.2",
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
@@ -26,6 +27,8 @@
     "@popperjs/core": "^2.11.2",
     "bootstrap": "^5.1.3",
     "ng-http-loader": "^11.0.1",
+    "primeicons": "^5.0.0",
+    "primeng": "^12.0.1",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.3.4",
     "toastr": "^2.1.4",
