--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@ng-select/ng-select": "^7.0.0",
     "@popperjs/core": "^2.11.2",
     "bootstrap": "^5.1.3",
     "ng-http-loader": "^11.0.1",
