--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ng-select/ng-select": "^7.0.0",
     "@popperjs/core": "^2.11.2",
     "bootstrap": "^5.1.3",
+    "file-saver": "^2.0.5",
     "ng-http-loader": "^11.0.1",
     "primeicons": "^5.0.0",
     "primeng": "^12.0.1",
@@ -40,6 +41,7 @@
     "@angular-devkit/build-angular": "~12.2.12",
     "@angular/cli": "~12.2.12",
     "@angular/compiler-cli": "~12.2.0",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "@types/toastr": "^2.1.39",
