--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@ng-select/ng-select": "^7.0.0",
     "@popperjs/core": "^2.11.2",
+    "angular-highcharts": "^13.0.1",
     "bootstrap": "^5.1.3",
     "file-saver": "^2.0.5",
+    "highcharts": "^10.0.0",
     "ng-http-loader": "^11.0.1",
     "primeicons": "^5.0.0",
     "primeng": "^12.0.1",
